--- a/StaticService/nginx.conf
+++ b/StaticService/nginx.conf
@@ -7,11 +7,11 @@ http {
   server {
     # Define the port where the local server listen
     listen 80;
-    
-    # Define a rule for the route /user
-    # here all request to /user are redirected to http://localhost:8082
-    location /user {
-        proxy_pass http://localhost:8082;
+
+    # Define a rule for the route to vite (react)
+    # here all request to /vite are redirected to http://localhost:3000
+    location /vite {
+        proxy_pass http://localhost:5173;
     }
 
 
