--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,6 @@ version: "3"
 services:
   service_statique:
     build:
-      context: ./ServiceStatique # Le chemin vers le répertoire contenant le Dockerfile
+      context: ./StaticService
     ports:
       - "80:80" # Mapping du port hôte sur le port du conteneur Nginx
