--- a/StaticService/nginx.conf
+++ b/StaticService/nginx.conf
@@ -8,9 +8,9 @@ http {
     # Define the port where the local server listen
     listen 80;
 
-    # Define a rule for the route to vite (react)
-    # here all request to /vite are redirected to http://localhost:3000
-    location /vite {
+    # Define a rule for the route /
+    # here all request to / are redirected to http://localhost:5173
+    location / {
         proxy_pass http://localhost:5173;
     }
 
