--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,21 +5,29 @@ services:
     build:
       context: ./UserService
       dockerfile: Dockerfile
+    ports:
+      - "8081:8080"
 
   cardservice:
     build:
       context: ./CardService
       dockerfile: Dockerfile
+    ports:
+      - "8082:8080"
 
   storeservice:
     build:
       context: ./StoreService
       dockerfile: Dockerfile
+    ports:
+      - "8083:8080"
 
   staticservice:
     build:
       context: ./StaticService
       dockerfile: Dockerfile
+    ports:
+      - "3000:8080"
 
   nginx:
     image: nginx:latest
