--- a/SuperService/pom.xml
+++ b/SuperService/pom.xml
@@ -8,31 +8,65 @@
 		<version>3.2.0</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.cardapp</groupId>
-	<artifactId>CardService</artifactId>
+	<groupId>com.cpe.springboot</groupId>
+	<artifactId>SuperService</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>CardService</name>
-	<description>CardService</description>
+	<name>SuperService</name>
+	<description>SuperService</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-devtools</artifactId>
-			<scope>runtime</scope>
-			<optional>true</optional>
+			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-activemq</artifactId>
+		</dependency>
+
+		<!-- 		<dependency> -->
+		<!-- 		<groupId>org.apache.activemq</groupId> -->
+		<!-- 		<artifactId>activemq-broker</artifactId> -->
+		<!-- 		</dependency> -->
+
+		<!-- 		<dependency> -->
+		<!-- 			<groupId>mysql</groupId> -->
+		<!-- 			<artifactId>mysql-connector-java</artifactId> -->
+		<!-- 			<scope>runtime</scope> -->
+		<!-- 		</dependency> -->
+
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<!-- Swagger UI -->
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-ui</artifactId>
+			<version>1.6.9</version>
+		</dependency>
+		<dependency>
+			<groupId>jakarta.persistence</groupId>
+			<artifactId>jakarta.persistence-api</artifactId>
+			<version>3.1.0</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
