--- a/UserService/pom.xml
+++ b/UserService/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.2.0</version>
+		<version>2.7.0</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.userapp</groupId>
@@ -14,7 +14,7 @@
 	<name>UserService</name>
 	<description>UserService</description>
 	<properties>
-		<java.version>17</java.version>
+		<java.version>11</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -34,9 +34,8 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.lib</groupId>
-			<artifactId>common-lib</artifactId>
-			<version>1.0.0</version>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 	</dependencies>
 
