--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,14 +6,21 @@ services:
       context: ./UserService
       dockerfile: Dockerfile
     ports:
-      - "8081:8080"
+      - "8081:8081"
+
+  superservice:
+    build:
+      context: ./SuperService
+      dockerfile: Dockerfile
+    ports:
+      - "8082:8082"
 
   staticservice:
     build:
       context: ./StaticService
       dockerfile: Dockerfile
     ports:
-      - "3000:8080"
+      - "3000:3000"
 
   nginx:
     image: nginx:latest
@@ -24,3 +31,4 @@ services:
     depends_on:
       - userservice
       - staticservice
+      - superservice
