--- a/nginx.conf
+++ b/nginx.conf
@@ -3,44 +3,17 @@ events {
 }
 
 http {
-    upstream userservice {
-        server userservice:8080;
-    }
-
-    upstream cardservice {
-        server cardservice:8080;
-    }
-
-    upstream storeservice {
-        server storeservice:8080;
-    }
-
-    upstream staticservice {
-        server staticservice:8080;
-    }
-
     server {
         listen 80;
-
-        location /userservice/ {
-            proxy_pass http://userservice/;
-        }
-
-        location /cardservice/ {
-            proxy_pass http://cardservice/;
-        }
-
-        location /storeservice/ {
-            proxy_pass http://storeservice/;
-        }
-
-        location /staticservice/ {
-            proxy_pass http://staticservice/;
-        }
+        server_name localhost;
 
         location / {
             root /usr/share/nginx/html;
             index index.html index.htm;
+        }
+
+        location /api {
+            proxy_pass http://localhost:8080;
         }
     }
 }
