--- a/nginx.conf
+++ b/nginx.conf
@@ -8,12 +8,21 @@ http {
         server_name localhost;
 
         location / {
-            root /usr/share/nginx/html;
-            index index.html index.htm;
+            proxy_pass http://staticservice:8080;
         }
 
-        location /api {
-            proxy_pass http://localhost:8080;
+        location /userservice {
+            proxy_pass http://userservice:8080;
         }
+
+        location /superservice {
+            proxy_pass http://superservice:8080;
+        }
+
+        location /notificationservice {
+            proxy_pass http://notificationservice:8080;
+        }
+
+
     }
 }
