--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
 
   notificationservice:
     build:
-      context: ./notificationservice
+      context: ./NotificationService
       dockerfile: Dockerfile
     ports:
       - "8083:8083"
