--- a/nginx.conf
+++ b/nginx.conf
@@ -3,26 +3,41 @@ events {
 }
 
 http {
+    upstream userservice {
+        server userservice:8080;
+    }
+
+    upstream cardservice {
+        server cardservice:8080;
+    }
+
+    upstream storeservice {
+        server storeservice:8080;
+    }
+
+    upstream staticservice {
+        server staticservice:8080;
+    }
+
     server {
         listen 80;
-        server_name localhost;
+
+        location /userservice/ {
+            proxy_pass http://userservice/;
+        }
+
+        location /cardservice/ {
+            proxy_pass http://cardservice/;
+        }
+
+        location /storeservice/ {
+            proxy_pass http://storeservice/;
+        }
 
         location / {
-            proxy_pass http://staticservice:8080;
+            proxy_pass http://staticservice/;
         }
-
-        location /userservice {
-            proxy_pass http://userservice:8080;
-        }
-
-        location /superservice {
-            proxy_pass http://superservice:8080;
-        }
-
-        location /notificationservice {
-            proxy_pass http://notificationservice:8080;
-        }
-
 
     }
 }
+
