--- a/nginx.conf
+++ b/nginx.conf
@@ -3,26 +3,40 @@ events {
 }
 
 http {
+    upstream userservice {
+        server userservice:8080;
+    }
+
+    upstream superservice {
+        server superservice:8080;
+    }
+
+    upstream notificationservice {
+        server notificationservice:8080;
+    }
+
+    upstream staticservice {
+        server staticservice:8080;
+    }
+
     server {
         listen 80;
         server_name localhost;
 
         location / {
-            proxy_pass http://staticservice:8080;
+            proxy_pass http://staticservice;
         }
 
         location /userservice {
-            proxy_pass http://userservice:8080;
+            proxy_pass http://userservice;
         }
 
         location /superservice {
-            proxy_pass http://superservice:8080;
+            proxy_pass http://superservice;
         }
 
         location /notificationservice {
-            proxy_pass http://notificationservice:8080;
+            proxy_pass http://notificationservice;
         }
-
-
     }
 }
