--- a/StaticService/Dockerfile
+++ b/StaticService/Dockerfile
@@ -1,5 +1,5 @@
 # Use an official Node.js image as the base
-FROM node:14
+FROM node:17
 
 # Set the working directory inside the container
 WORKDIR /app
@@ -10,14 +10,14 @@ COPY package*.json ./
 # Install dependencies
 RUN npm install
 
+# Install specific version of Vite
+RUN npm install vite@5.0.0
+
 # Copy the rest of the project files to the working directory
 COPY . .
-
-# Build the React app
-RUN npm run dev
 
 # Expose the port that the app will run on
 EXPOSE 3000
 
 # Start the app
-CMD ["npm", "run", "start"]
+CMD ["npm", "run", "dev"]
